[package]
name = "enkm"
version = "0.1.0"
authors = ["yukimemi <yukimemi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
walkdir = "2.3.1"
chrono = "0.4.10"
config = "0.10.1"
serde_derive = "1.0.104"
